--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "expo": "~54.0.10",
-  "expo-camera": "~15.0.11",
+    "expo-camera": "~15.0.11",
     "expo-constants": "~18.0.9",
     "expo-crypto": "~15.0.7",
     "expo-document-picker": "~14.0.7",
@@ -30,6 +30,7 @@
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.8",
     "expo-splash-screen": "~31.0.10",
+    "expo-standard-web-crypto": "^3.0.7",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
